more updates of configuration files

--- a/Alignment/OfflineValidation/test/testPVValidation_Relvals_DATA.ini
+++ b/Alignment/OfflineValidation/test/testPVValidation_Relvals_DATA.ini
@@ -1,6 +1,10 @@
 ###########################
 # test command:
-# python submitAllJobs.py -j TEST -D /HLTPhysics/Run2016C-TkAlMinBias-07Dec2018-v1/ALCARECO -i testPVValidation_Relvals_DATA.ini
+# - for run-based:
+# python PVValidationHTCondorSubmitter.py -j TEST -D /HLTPhysics/Run2016C-TkAlMinBias-07Dec2018-v1/ALCARECO -i testPVValidation_Relvals_DATA.ini -r
+# single-run
+# python PVValidationHTCondorSubmitter.py -j TEST -D /HLTPhysics/Run2016C-TkAlMinBias-07Dec2018-v1/ALCARECO -i testPVValidation_Relvals_DATA.ini 
+
 
 [Job]
 jobname: test
@@ -8,7 +12,8 @@ isda: True
 ismc: False
 maxevents: 10000
 
-[Conditions]
+[Conditions:OfflineGT]
+jobname: testingOfflineGT
 gt: auto:run2_data
 allFromGT: False
 applyextracond: True
@@ -32,3 +37,6 @@ lumilist: /afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/certification/Collisions16/13TeV
 
 [ExtraConditions]   
 SiPixelTemplateDBObjectRcd:frontier://FrontierProd/CMS_CONDITIONS,SiPixelTemplateDBObject_38T_2015_v3_hltvalidation 
+
+[validations]
+OfflineGT: True
