add possibility of configuring refitter and CPE type from submission tool

--- a/Alignment/OfflineValidation/test/testPVValidation.ini
+++ b/Alignment/OfflineValidation/test/testPVValidation.ini
@@ -18,6 +18,10 @@ lumilist: /afs/cern.ch/cms/CAF/CMSCOMM/COMM_DQM/certification/Collisions16/13TeV
 vertextype: offlinePrimaryVertices
 tracktype: ALCARECOTkAlMinBias
 
+[Refit]
+refittertype: RefitType.STANDARD
+ttrhtype: WithAngleAndTemplate
+
 [Conditions:PromptGT]
 jobname: testingPromptGT
 gt: auto:run3_data_promptlike
