--- a/Alignment/OfflineValidation/test/testPVValidation_Relvals_DATA.ini
+++ b/Alignment/OfflineValidation/test/testPVValidation_Relvals_DATA.ini
@@ -5,7 +5,6 @@
 # single-run
 # python PVValidationHTCondorSubmitter.py -j TEST -D /HLTPhysics/Run2016C-TkAlMinBias-07Dec2018-v1/ALCARECO -i testPVValidation_Relvals_DATA.ini 
 
-
 [Job]
 jobname: test
 isda: True
@@ -28,6 +27,11 @@ bowtag: TrackerSurafceDeformations_v1_express
 [Type]
 vertextype: offlinePrimaryVertices
 tracktype: ALCARECOTkAlMinBias
+
+[Refit]
+refittertype: RefitType.COMMON
+ttrhtype: WithTrackAngle
+#ttrhtype: WithAngleAndTemplate
 
 [Selection]
 applyruncontrol: True
