--- a/Alignment/OfflineValidation/test/testPVValidation_Relvals_MC.ini
+++ b/Alignment/OfflineValidation/test/testPVValidation_Relvals_MC.ini
@@ -25,6 +25,10 @@ bowtag: TrackerSurfaceDeformations_2011Realistic_v2_mc
 vertextype: offlinePrimaryVertices
 tracktype: ALCARECOTkAlMinBias
 
+[Refit]
+refittertype: RefitType.COMMON
+ttrhtype: WithAngleAndTemplate
+
 [Selection]
 applyruncontrol: True
 ptcut: 3.
